# ComfyUI-FluxTrainer-Pro

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CREDITS.md  QUICK_START.md  README.md  __init__.py  flux2_train_network_comfy.py  flux_train_network_comfy.py  install.py  nodes.py  nodes_extended.py  nodes_flux2.py  nodes_sd3.py  nodes_sdxl.py  pyproject.toml  requirements.txt  train_network.py  training_server.py  training_state.py
docs/: EXTENDED_NODES.md  FLUX2_TRAINING_GUIDE.md  QUICK_START.md
example_workflows/: flux2_complete_training.json  flux2_complete_training_new.json  flux2_lora_low_vram_example.json
networks/: lora_flux.py
web/: fluxtrainer_dashboard.js  fluxtrainer_pro.js
