[project]
name = "comfyui-fluxtrainer-pro"
description = "Professional Flux/Flux.2 LoRA training for ComfyUI with low VRAM optimization. Fork of kijai/ComfyUI-FluxTrainer with Flux.2 Klein 9B and Dev support, block swapping, and 8GB GPU compatibility."
version = "2.0.0"
license = {file = "LICENSE"}
dependencies = [
    "accelerate>=0.33.0",
    "numpy<=1.26.4",
    "transformers>=4.44.0",
    "diffusers>=0.25.0",
    "ftfy>=6.1.1",
    "opencv-python>=4.7.0.68",
    "einops>=0.7.0",
    "bitsandbytes>=0.43.3",
    "prodigyopt>=1.0",
    "lion-pytorch>=0.0.6",
    "safetensors>=0.4.2",
    "altair>=4.2.2",
    "toml>=0.10.2",
    "voluptuous>=0.13.1",
    "huggingface-hub>=0.24.5",
    "imagesize>=1.4.1",
    "rich>=13.7.0",
    "came_pytorch",
    "matplotlib",
    "sentencepiece>=0.2.0",
    "psutil>=5.9.0",
]
keywords = ["comfyui", "flux", "flux2", "lora", "training", "ai", "machine-learning", "low-vram"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Repository = "https://github.com/nkVas1/ComfyUI-FluxTrainer-Pro"
Documentation = "https://github.com/nkVas1/ComfyUI-FluxTrainer-Pro/blob/main/docs/FLUX2_TRAINING_GUIDE.md"
Issues = "https://github.com/nkVas1/ComfyUI-FluxTrainer-Pro/issues"
Changelog = "https://github.com/nkVas1/ComfyUI-FluxTrainer-Pro/blob/main/CHANGELOG.md"
Original = "https://github.com/kijai/ComfyUI-FluxTrainer"

# Used by Comfy Registry https://comfyregistry.org
[tool.comfy]
PublisherId = "nkVas1"
DisplayName = "ComfyUI-FluxTrainer-Pro"
Icon = "🚀"
